--- a/src/js/package.json
+++ b/src/js/package.json
@@ -13,14 +13,15 @@
     "react-dom": "~0.14.7",
     "react": "~0.14.7",
     "react-router": "~2.0.0",
-    "react-bootstrap": "~0.28.3",
+    "react-bootstrap": "~0.29.2",
     "redux": "~3.3.1",
     "react-redux": "~4.4.0",
     "react-router-redux": "~4.0.0",
     "classnames": "~2.2.3",
-    "elasticsearch": "~11.0.1",
     "isomorphic-fetch": "~2.2.1",
-    "babel-polyfill": "~6.7.4"
+    "babel-polyfill": "~6.7.4",
+    "redux-thunk": "~2.0.1",
+    "redux-logger": "~2.6.1"
   },
   "devDependencies": {
     "babel-preset-react": "~6.5.0",
