--- a/src/js/package.json
+++ b/src/js/package.json
@@ -9,27 +9,34 @@
   "author": "Josh Goodman",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "react-addons-pure-render-mixin": "~0.14.7",
-    "react-dom": "~0.14.7",
-    "react": "~0.14.7",
-    "react-router": "~2.0.0",
-    "react-bootstrap": "~0.29.2",
-    "redux": "~3.3.1",
-    "react-redux": "~4.4.0",
-    "react-router-redux": "~4.0.0",
-    "classnames": "~2.2.3",
-    "isomorphic-fetch": "~2.2.1",
-    "babel-polyfill": "~6.7.4",
-    "redux-thunk": "~2.0.1",
-    "redux-logger": "~2.6.1"
+    "babel-polyfill": "*",
+    "classnames": "^2.2.5",
+    "isomorphic-fetch": "*",
+    "react": "*",
+    "react-addons-pure-render-mixin": "*",
+    "react-bootstrap": "*",
+    "react-bootstrap-table": "*",
+    "react-dom": "*",
+    "react-fa": "*",
+    "react-redux": "*",
+    "react-router": "*",
+    "react-router-redux": "*",
+    "redux": "*",
+    "redux-logger": "*",
+    "redux-thunk": "*"
   },
   "devDependencies": {
-    "babel-preset-react": "~6.5.0",
-    "babel-preset-es2015": "~6.6.0",
-    "webpack": "~1.12.14",
-    "babel-core": "~6.6.0",
-    "babel-loader": "~6.2.4",
-    "babel-plugin-transform-object-rest-spread": "~6.6.4",
-    "json-loader": "~0.5.4"
+    "babel-preset-react": "*",
+    "babel-preset-es2015": "*",
+    "webpack": "*",
+    "babel-core": "*",
+    "babel-loader": "*",
+    "babel-plugin-transform-object-rest-spread": "*",
+    "json-loader": "*",
+    "extract-text-webpack-plugin": "*",
+    "style-loader": "*",
+    "css-loader": "*",
+    "url-loader": "*",
+    "file-loader": "*"
   }
 }
