--- a/src/js/package.json
+++ b/src/js/package.json
@@ -26,17 +26,20 @@
     "redux-thunk": "*"
   },
   "devDependencies": {
-    "babel-preset-react": "*",
-    "babel-preset-es2015": "*",
-    "webpack": "*",
+    "autoprefixer": "^6.4.1",
     "babel-core": "*",
     "babel-loader": "*",
     "babel-plugin-transform-object-rest-spread": "*",
-    "json-loader": "*",
-    "extract-text-webpack-plugin": "*",
-    "style-loader": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "*",
     "css-loader": "*",
+    "extract-text-webpack-plugin": "*",
+    "file-loader": "*",
+    "json-loader": "*",
+    "postcss-loader": "^0.13.0",
+    "precss": "^1.4.0",
+    "style-loader": "*",
     "url-loader": "*",
-    "file-loader": "*"
+    "webpack": "*"
   }
 }
